--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple P5.js Game</title>
+    <title>The Untitled Scifi Western Pre-Adventure</title>
     <style>
         /* Center the canvas */
         body {
