--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         let character4Area = {x: 1106, y: 544, w: 125, h: 171};
         let character5Area = {x: 1253, y: 515, w: 164, h: 342};
         let pathArea = {x: 625, y: 270, w: 220, h: 96};
-        let storefront1Area = x: 350, y: 420, w: 215, h: 42};
-        let storefront2Area = x: 1000, y: 95, w: 100, h: 250};
-        let storefront3Area = x: 500, y: 315, w: 135, h: 60};
+        let storefront1Area = {x: 350, y: 420, w: 215, h: 42}; // Corrected curly braces
+        let storefront2Area = {x: 1000, y: 95, w: 100, h: 250}; // Corrected curly braces
+        let storefront3Area = {x: 500, y: 315, w: 135, h: 60}; // Corrected curly braces
 
         function preload() {
             bg = loadImage('background.png'); // Load the background image
