--- a/index.html
+++ b/index.html
@@ -17,23 +17,63 @@
         canvas {
             border: 1px solid #000;
         }
+        
+        /* Modal styling */
+        #modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+        #modal-content {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            max-width: 300px;
+            text-align: center;
+        }
+        #modal-content p {
+            margin: 0 0 20px;
+        }
+        #close-btn {
+            background-color: #008cba;
+            color: #fff;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        #close-btn:hover {
+            background-color: #005f5f;
+        }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 </head>
 <body>
+    <div id="modal">
+        <div id="modal-content">
+            <p id="modal-message">Message</p>
+            <button id="close-btn">Close</button>
+        </div>
+    </div>
     <script>
         let bg; // Variable to store the background image
 
         // Define polygons (rectangular areas) for interactive elements
-        let character1Area = {x: 198, y: 543, w: 240, h: 320};
-        let character2Area = {x: 575, y: 425, w: 263, h: 448};
-        let character3Area = {x: 949, y: 417, w: 141, h: 298};
-        let character4Area = {x: 1106, y: 544, w: 125, h: 171};
-        let character5Area = {x: 1253, y: 515, w: 164, h: 342};
-        let pathArea = {x: 635, y: 270, w: 220, h: 96};
-        let storefront1Area = {x: 445, y: 425, w: 125, h: 165}; // Corrected curly braces
-        let storefront2Area = {x: 1000, y: 95, w: 100, h: 250}; // Corrected curly braces
-        let storefront3Area = {x: 500, y: 315, w: 135, h: 75}; // Corrected curly braces
+        let character1Area = {x: 198, y: 543, w: 240, h: 320, message: "You clicked on Character 1!"};
+        let character2Area = {x: 575, y: 425, w: 263, h: 448, message: "Character 2 says hi!"};
+        let character3Area = {x: 949, y: 417, w: 141, h: 298, message: "Character 3 is intrigued."};
+        let character4Area = {x: 1106, y: 544, w: 125, h: 171, message: "Character 4 is mysterious."};
+        let character5Area = {x: 1253, y: 515, w: 164, h: 342, message: "Character 5 looks strong."};
+        let pathArea = {x: 635, y: 270, w: 220, h: 96, message: "This path leads somewhere unknown."};
+        let storefront1Area = {x: 445, y: 425, w: 125, h: 165, message: "Storefront 1 has goods for sale."};
+        let storefront2Area = {x: 1000, y: 95, w: 100, h: 250, message: "Storefront 2 is closed."};
+        let storefront3Area = {x: 500, y: 315, w: 130, h: 75, message: "Storefront 3 is welcoming you."};
 
         function preload() {
             bg = loadImage('background.png'); // Load the background image
@@ -41,6 +81,11 @@
 
         function setup() {
             createCanvas(1500, 900);
+
+            // Close modal on button click
+            document.getElementById('close-btn').onclick = function() {
+                document.getElementById('modal').style.display = 'none';
+            };
         }
 
         function draw() {
@@ -63,77 +108,43 @@
             drawRectangle(storefront3Area, [255, 255, 255, 100]);
 
             // Highlight rectangles on hover
-            if (isMouseOverRectangle(character1Area)) {
-                drawRectangle(character1Area, [255, 255, 255, 200]);
-            }
-            if (isMouseOverRectangle(character2Area)) {
-                drawRectangle(character2Area, [255, 255, 255, 200]);
-            }
-            if (isMouseOverRectangle(character3Area)) {
-                drawRectangle(character3Area, [255, 255, 255, 200]);
-            }
-            if (isMouseOverRectangle(character4Area)) {
-                drawRectangle(character4Area, [255, 255, 255, 200]);
-            }
-            if (isMouseOverRectangle(character5Area)) {
-                drawRectangle(character5Area, [255, 255, 255, 200]);
-            }
-            if (isMouseOverRectangle(pathArea)) {
-                drawRectangle(pathArea, [255, 255, 255, 200]);
-            }
-            if (isMouseOverRectangle(storefront1Area)) {
-                drawRectangle(storefront1Area, [255, 255, 255, 200]);
-            }
-            if (isMouseOverRectangle(storefront2Area)) {
-                drawRectangle(storefront2Area, [255, 255, 255, 200]);
-            }
-            if (isMouseOverRectangle(storefront3Area)) {
-                drawRectangle(storefront3Area, [255, 255, 255, 200]);
-            }
+            if (isMouseOverRectangle(character1Area)) drawRectangle(character1Area, [255, 255, 255, 200]);
+            if (isMouseOverRectangle(character2Area)) drawRectangle(character2Area, [255, 255, 255, 200]);
+            if (isMouseOverRectangle(character3Area)) drawRectangle(character3Area, [255, 255, 255, 200]);
+            if (isMouseOverRectangle(character4Area)) drawRectangle(character4Area, [255, 255, 255, 200]);
+            if (isMouseOverRectangle(character5Area)) drawRectangle(character5Area, [255, 255, 255, 200]);
+            if (isMouseOverRectangle(pathArea)) drawRectangle(pathArea, [255, 255, 255, 200]);
+            if (isMouseOverRectangle(storefront1Area)) drawRectangle(storefront1Area, [255, 255, 255, 200]);
+            if (isMouseOverRectangle(storefront2Area)) drawRectangle(storefront2Area, [255, 255, 255, 200]);
+            if (isMouseOverRectangle(storefront3Area)) drawRectangle(storefront3Area, [255, 255, 255, 200]);
         }
 
-        // Helper function to draw a rectangle with a specified color
         function drawRectangle(area, color) {
             fill(...color);
             noStroke();
             rect(area.x, area.y, area.w, area.h);
         }
 
-        // Function to check if the mouse is over a rectangle
         function isMouseOverRectangle(area) {
             return mouseX > area.x && mouseX < area.x + area.w &&
                    mouseY > area.y && mouseY < area.y + area.h;
         }
 
-        // Optional mousePressed function for testing interactions
         function mousePressed() {
-            if (isMouseOverRectangle(character1Area)) {
-                console.log("Character 1 area clicked");
-            }
-            if (isMouseOverRectangle(character2Area)) {
-                console.log("Character 2 area clicked");
-            }
-            if (isMouseOverRectangle(character3Area)) {
-                console.log("Character 3 area clicked");
-            }
-            if (isMouseOverRectangle(character4Area)) {
-                console.log("Character 4 area clicked");
-            }
-            if (isMouseOverRectangle(character5Area)) {
-                console.log("Character 5 area clicked");
-            }
-            if (isMouseOverRectangle(pathArea)) {
-                console.log("Path area clicked");
-            }
-            if (isMouseOverRectangle(storefront1Area)) {
-                console.log("Storefront 1 area clicked");
-            }
-            if (isMouseOverRectangle(storefront2Area)) {
-                console.log("Storefront 2 area clicked");
-            }
-            if (isMouseOverRectangle(storefront3Area)) {
-                console.log("Storefront 3 area clicked");
-            }
+            if (isMouseOverRectangle(character1Area)) showMessage(character1Area.message);
+            if (isMouseOverRectangle(character2Area)) showMessage(character2Area.message);
+            if (isMouseOverRectangle(character3Area)) showMessage(character3Area.message);
+            if (isMouseOverRectangle(character4Area)) showMessage(character4Area.message);
+            if (isMouseOverRectangle(character5Area)) showMessage(character5Area.message);
+            if (isMouseOverRectangle(pathArea)) showMessage(pathArea.message);
+            if (isMouseOverRectangle(storefront1Area)) showMessage(storefront1Area.message);
+            if (isMouseOverRectangle(storefront2Area)) showMessage(storefront2Area.message);
+            if (isMouseOverRectangle(storefront3Area)) showMessage(storefront3Area.message);
+        }
+
+        function showMessage(message) {
+            document.getElementById('modal-message').innerText = message;
+            document.getElementById('modal').style.display = 'flex';
         }
     </script>
 </body>
