--- a/index.html
+++ b/index.html
@@ -18,26 +18,21 @@
             border: 1px solid #000;
         }
         
-        /* Modal styling */
+        /* Modal styling, positioned at the top center of the canvas */
         #modal {
             display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            justify-content: center;
-            align-items: center;
-        }
-        #modal-content {
-            background-color: #fff;
+            position: absolute;
+            top: 50px;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: rgba(255, 255, 255, 0.9);
             padding: 20px;
             border-radius: 8px;
-            max-width: 300px;
             text-align: center;
+            max-width: 300px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         }
-        #modal-content p {
+        #modal p {
             margin: 0 0 20px;
         }
         #close-btn {
@@ -56,10 +51,8 @@
 </head>
 <body>
     <div id="modal">
-        <div id="modal-content">
-            <p id="modal-message">Message</p>
-            <button id="close-btn">Close</button>
-        </div>
+        <p id="modal-message">Message</p>
+        <button id="close-btn">Close</button>
     </div>
     <script>
         let bg; // Variable to store the background image
@@ -73,7 +66,9 @@
         let pathArea = {x: 635, y: 270, w: 220, h: 96, message: "This path leads somewhere unknown."};
         let storefront1Area = {x: 445, y: 425, w: 125, h: 165, message: "Storefront 1 has goods for sale."};
         let storefront2Area = {x: 1000, y: 95, w: 100, h: 250, message: "Storefront 2 is closed."};
-        let storefront3Area = {x: 500, y: 315, w: 130, h: 75, message: "Storefront 3 is welcoming you."};
+        let storefront3Area = {x: 500, y: 315, w: 135, h: 75, message: "Storefront 3 is welcoming you."};
+
+        let isModalOpen = false;
 
         function preload() {
             bg = loadImage('background.png'); // Load the background image
@@ -85,6 +80,7 @@
             // Close modal on button click
             document.getElementById('close-btn').onclick = function() {
                 document.getElementById('modal').style.display = 'none';
+                isModalOpen = false;
             };
         }
 
@@ -131,6 +127,9 @@
         }
 
         function mousePressed() {
+            // Ignore clicks when the modal is open
+            if (isModalOpen) return;
+
             if (isMouseOverRectangle(character1Area)) showMessage(character1Area.message);
             if (isMouseOverRectangle(character2Area)) showMessage(character2Area.message);
             if (isMouseOverRectangle(character3Area)) showMessage(character3Area.message);
@@ -145,6 +144,7 @@
         function showMessage(message) {
             document.getElementById('modal-message').innerText = message;
             document.getElementById('modal').style.display = 'flex';
+            isModalOpen = true;
         }
     </script>
 </body>
