--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             border-radius: 4px;
             cursor: pointer;
             font-size: 16px; /* Slightly larger button text */
-            margin-top: 20px; /* Added space above button */
+            margin-left: 20px; /* Added space next to button */
         }
         .btn:hover {
             background-color: #005f5f;
@@ -54,7 +54,7 @@
 </head>
 <body>
     <div id="opening-modal">
-        <p id="opening-message">Welcome to the Untitled Sci-fi Western Pre-Adventure! Your goal is to explore the environment, interact with characters and objects, and uncover clues about the mysterious world you’re in. Click Start to begin!</p>
+        <p id="opening-message">Welcome to the Untitled Sci-fi Western Pre-Adventure! Your goal is to interact with various elements, hopefully inspiring you to overcome design obstacles in the creation of your untitled scifi Western campaign setting. Be careful not to lose all motivation!</p>
         <button id="start-btn" class="btn">Start</button>
     </div>
     <div id="modal">
