--- a/index.html
+++ b/index.html
@@ -49,33 +49,57 @@
         .btn:hover {
             background-color: #005f5f;
         }
+
+        /* Motivation bar styling */
+        #motivation-bar {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            width: 200px;
+            height: 30px;
+            background-color: #e0e0e0;
+            border-radius: 5px;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+        }
+        #motivation-fill {
+            height: 100%;
+            width: 50%; /* Initial motivation at 5 points */
+            background-color: #76c7c0;
+            border-radius: 5px;
+        }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 </head>
 <body>
+    <div id="motivation-bar">
+        <div id="motivation-fill"></div>
+    </div>
+
     <div id="opening-modal">
         <p id="opening-message">Welcome to the Untitled Scifi Western Pre-Adventure! Your goal is to interact with various elements, hopefully inspiring you to overcome design obstacles in the creation of your untitled scifi Western campaign setting. Be careful not to lose all motivation!</p>
         <button id="start-btn" class="btn">Start</button>
     </div>
+
     <div id="modal">
         <p id="modal-message">Message</p>
-        <button id="close-btn" class="btn">Close</button>
+        <button id="increase-btn" class="btn">Increase Motivation</button>
+        <button id="decrease-btn" class="btn">Decrease Motivation</button>
     </div>
+
     <script>
         let bg; // Variable to store the background image
-
-        // Define polygons (rectangular areas) for interactive elements
-        let character1Area = {x: 198, y: 543, w: 240, h: 320, message: "You clicked on Character 1!"};
-        let character2Area = {x: 575, y: 425, w: 263, h: 448, message: "Character 2 says hi!"};
-        let character3Area = {x: 949, y: 417, w: 141, h: 298, message: "Character 3 is intrigued."};
-        let character4Area = {x: 1106, y: 544, w: 125, h: 171, message: "Character 4 is mysterious."};
-        let character5Area = {x: 1253, y: 515, w: 164, h: 342, message: "Character 5 looks strong."};
-        let path1Area = {x: 635, y: 270, w: 220, h: 96, message: "This path leads somewhere unknown."};
-        let path2Area = {x: 700, y: 50, w: 65, h: 50, message: "This path leads somewhere unknown."};
-        let storefront1Area = {x: 445, y: 425, w: 125, h: 165, message: "Storefront 1 has goods for sale."};
-        let storefront2Area = {x: 1000, y: 95, w: 100, h: 250, message: "Storefront 2 is closed."};
-        let storefront3Area = {x: 500, y: 315, w: 130, h: 75, message: "Storefront 3 is welcoming you."};
-
+        let motivation = 5; // Start motivation at 5
+        let areas = [
+            {x: 198, y: 543, w: 240, h: 320, message: "You clicked on Character 1!", visible: true},
+            {x: 575, y: 425, w: 263, h: 448, message: "Character 2 says hi!", visible: true},
+            {x: 949, y: 417, w: 141, h: 298, message: "Character 3 is intrigued.", visible: true},
+            {x: 1106, y: 544, w: 125, h: 171, message: "Character 4 is mysterious.", visible: true},
+            {x: 1253, y: 515, w: 164, h: 342, message: "Character 5 looks strong.", visible: true},
+            {x: 635, y: 270, w: 220, h: 96, message: "This path leads somewhere unknown.", visible: true},
+            {x: 445, y: 425, w: 125, h: 165, message: "Storefront 1 has goods for sale.", visible: true},
+            {x: 1000, y: 95, w: 100, h: 250, message: "Storefront 2 is closed.", visible: true},
+            {x: 500, y: 315, w: 130, h: 75, message: "Storefront 3 is welcoming you.", visible: true}
+        ];
         let isModalOpen = false;
 
         function preload() {
@@ -95,10 +119,16 @@
                 isModalOpen = false;
             };
 
-            // Close button for interaction modals
-            document.getElementById('close-btn').onclick = function() {
-                document.getElementById('modal').style.display = 'none';
-                isModalOpen = false;
+            // Increase button for motivation
+            document.getElementById('increase-btn').onclick = function() {
+                updateMotivation(1);
+                closeModal();
+            };
+
+            // Decrease button for motivation
+            document.getElementById('decrease-btn').onclick = function() {
+                updateMotivation(-1);
+                closeModal();
             };
         }
 
@@ -110,29 +140,19 @@
             textSize(16);
             text("X: " + mouseX + " Y: " + mouseY, 10, 20); // Display coordinates for testing
 
+            // Draw motivation bar
+            let motivationFill = document.getElementById('motivation-fill');
+            motivationFill.style.width = (motivation * 10) + "%";
+
             // Draw transparent rectangles for interactive areas
-            drawRectangle(character1Area, [255, 255, 255, 50]);
-            drawRectangle(character2Area, [255, 255, 255, 50]);
-            drawRectangle(character3Area, [255, 255, 255, 50]);
-            drawRectangle(character4Area, [255, 255, 255, 50]);
-            drawRectangle(character5Area, [255, 255, 255, 50]);
-            drawRectangle(path1Area, [255, 255, 255, 50]);
-            drawRectangle(path2Area, [255, 255, 255, 50]);
-            drawRectangle(storefront1Area, [255, 255, 255, 50]);
-            drawRectangle(storefront2Area, [255, 255, 255, 50]);
-            drawRectangle(storefront3Area, [255, 255, 255, 50]);
+            areas.forEach(area => {
+                if (area.visible) drawRectangle(area, [255, 255, 255, 50]);
+            });
 
             // Highlight rectangles on hover
-            if (isMouseOverRectangle(character1Area)) drawRectangle(character1Area, [255, 255, 255, 100]);
-            if (isMouseOverRectangle(character2Area)) drawRectangle(character2Area, [255, 255, 255, 100]);
-            if (isMouseOverRectangle(character3Area)) drawRectangle(character3Area, [255, 255, 255, 100]);
-            if (isMouseOverRectangle(character4Area)) drawRectangle(character4Area, [255, 255, 255, 100]);
-            if (isMouseOverRectangle(character5Area)) drawRectangle(character5Area, [255, 255, 255, 100]);
-            if (isMouseOverRectangle(path1Area)) drawRectangle(path1Area, [255, 255, 255, 100]);
-            if (isMouseOverRectangle(path2Area)) drawRectangle(path2Area, [255, 255, 255, 100]);
-            if (isMouseOverRectangle(storefront1Area)) drawRectangle(storefront1Area, [255, 255, 255, 100]);
-            if (isMouseOverRectangle(storefront2Area)) drawRectangle(storefront2Area, [255, 255, 255, 100]);
-            if (isMouseOverRectangle(storefront3Area)) drawRectangle(storefront3Area, [255, 255, 255, 100]);
+            areas.forEach(area => {
+                if (area.visible && isMouseOverRectangle(area)) drawRectangle(area, [255, 255, 255, 100]);
+            });
         }
 
         function drawRectangle(area, color) {
@@ -150,22 +170,28 @@
             // Ignore clicks when a modal is open
             if (isModalOpen) return;
 
-            if (isMouseOverRectangle(character1Area)) showMessage(character1Area.message);
-            if (isMouseOverRectangle(character2Area)) showMessage(character2Area.message);
-            if (isMouseOverRectangle(character3Area)) showMessage(character3Area.message);
-            if (isMouseOverRectangle(character4Area)) showMessage(character4Area.message);
-            if (isMouseOverRectangle(character5Area)) showMessage(character5Area.message);
-            if (isMouseOverRectangle(path1Area)) showMessage(path1Area.message);
-            if (isMouseOverRectangle(path2Area)) showMessage(path2Area.message);
-            if (isMouseOverRectangle(storefront1Area)) showMessage(storefront1Area.message);
-            if (isMouseOverRectangle(storefront2Area)) showMessage(storefront2Area.message);
-            if (isMouseOverRectangle(storefront3Area)) showMessage(storefront3Area.message);
+            // Check if any area is clicked
+            areas.forEach(area => {
+                if (area.visible && isMouseOverRectangle(area)) {
+                    showMessage(area);
+                    area.visible = false; // Make the area disappear after interaction
+                }
+            });
         }
 
-        function showMessage(message) {
-            document.getElementById('modal-message').innerText = message;
+        function showMessage(area) {
+            document.getElementById('modal-message').innerText = area.message;
             document.getElementById('modal').style.display = 'flex';
             isModalOpen = true;
+        }
+
+        function closeModal() {
+            document.getElementById('modal').style.display = 'none';
+            isModalOpen = false;
+        }
+
+        function updateMotivation(change) {
+            motivation = Math.min(10, Math.max(0, motivation + change)); // Keep motivation within 0-10
         }
     </script>
 </body>
