--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         canvas {
             border: 1px solid #000;
         }
-        
+
         /* Modal styling, positioned at the top center of the canvas */
         #modal, #opening-modal {
             display: none;
@@ -60,18 +60,31 @@
             background-color: #e0e0e0;
             border-radius: 5px;
             box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+            display: flex;
+            align-items: center;
+            padding-left: 10px;
+            font-size: 14px;
+            color: #333;
+            font-weight: bold;
         }
         #motivation-fill {
             height: 100%;
-            width: 50%; /* Initial motivation at 5 points */
             background-color: #76c7c0;
             border-radius: 5px;
+        }
+        #motivation-label {
+            position: absolute;
+            left: 10px;
+            font-size: 14px;
+            color: #333;
+            font-weight: bold;
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
 </head>
 <body>
     <div id="motivation-bar">
+        <span id="motivation-label">Motivation: 5/10</span>
         <div id="motivation-fill"></div>
     </div>
 
@@ -135,14 +148,8 @@
         function draw() {
             background(bg); // Display the background image
 
-            // Display mouse coordinates at the top left corner
-            fill(255); // White color for text
-            textSize(16);
-            text("X: " + mouseX + " Y: " + mouseY, 10, 20); // Display coordinates for testing
-
-            // Draw motivation bar
-            let motivationFill = document.getElementById('motivation-fill');
-            motivationFill.style.width = (motivation * 10) + "%";
+            // Update motivation bar fill width and text label
+            updateMotivationDisplay();
 
             // Draw transparent rectangles for interactive areas
             areas.forEach(area => {
@@ -192,6 +199,14 @@
 
         function updateMotivation(change) {
             motivation = Math.min(10, Math.max(0, motivation + change)); // Keep motivation within 0-10
+            updateMotivationDisplay();
+        }
+
+        function updateMotivationDisplay() {
+            // Update the width of the motivation fill bar
+            document.getElementById('motivation-fill').style.width = (motivation * 10) + "%";
+            // Update the motivation label text
+            document.getElementById('motivation-label').innerText = `Motivation: ${motivation}/10`;
         }
     </script>
 </body>
